# Price_Optimization

./: README.md  pyproject.toml
scritps/: pricing_analysis.ipynb
