[project]
name = "pricing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
    "numpy>=1.26.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly-express>=0.4.1",
    "plotnine>=0.14.5",
    "pygam==0.9.1",
    "scikit-learn>=1.6.1",
    "scipy==1.11.4",
    "statsmodels>=0.14.4",
    "ucimlrepo>=0.0.7",
]
